[package]
name = "adb"
version = "0.4.3"
edition = "2021"
authors = ["J/A <archer884@gmail.com>"]
description = "An airport code database and nav assist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = 0

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.46", features = ["derive", "wrap_help"] }
csv = "1.3.1"
directories = "6.0.0"
geoutils = "0.5.1"
hashbrown = "0.15.5"
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tantivy = "0.25.0"
