[package]
name = "adb"
version = "0.2.2"
edition = "2021"
authors = ["J/A <archer884@gmail.com>"]
description = "An airport code database and nav assist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
atty = "0.2.14"
clap = { version = "3.2.20", features = ["derive", "wrap_help" ] }

[dependencies.adb-data]
path = "../adb-data"

[build-dependencies]
csv = "1.1.6"

[build-dependencies.adb-data]
path = "../adb-data"
features = ["aotload"]
